@@ -1,24 +1,25 @@
-#!/bin/bash
+#!/bin/sh
+''''exec python -u -Wignore "$0" ${1+"$@"} # '''
 
-"exec" "python" "-u" "-Wignore" "$0" "$@"
 
 from notify import loader
+import sys
 import argparse
+import oauth2client
 
 if __name__ == "__main__":
 
-    opt = argparse.ArgumentParser()
+    opt = argparse.ArgumentParser( parents=[oauth2client.tools.argparser], formatter_class=argparse.RawDescriptionHelpFormatter)
+
     ## required arguments
-    req = opt.add_argument_group('required named arguments')
-    req.add_argument ("-c", "--config", dest="conf", help="Path to configuration file" , required=True)
-    req.add_argument ("-s", "--site", dest="blsite", help="bulk load site: must be one of the following GHS|MUSC|PH|SRHS", required=True )
-    req.add_argument ("-b", "--batch-size", dest="blsize", type=int, help="bulk load batch size: must be larger than zero",required=True )
+    opt.add_argument ("-c", "--config", dest="conf", help="Path to configuration file" , required=True)
+    opt.add_argument ("-s", "--site", dest="blsite", help="bulk load site: must be one of the following GHS|MUSC|PH|SRHS", required=True )
+    opt.add_argument ("-b", "--batch-size", dest="blsize", type=int, help="bulk load batch size: must be larger than zero",required=True )
 
     opt.add_argument("-l", "--log", dest="logLevel", choices=['DEBUG', 'INFO', 'WARNING', 'ERROR', 'CRITICAL', 'VERBOSE'], default='INFO', help="Set the logging level")
     opt.add_argument("-p", "--print", dest="show", default=False, action="store_true", help="Print configuration")
-    args = opt.parse_args()
-
-    dr = loader.loader(args)
+    
+    dr = loader.loader(opt)
     dr.run()
 
 
