@@ -35,3 +35,39 @@ site_list: SITE_LIST
 
 ;;; script to source and capture environment variables ;;; ---
 environment: /oracle/apps/apps_st/appl/APPSHTBDEV_hssc-cdwr3-htb-d.env
+
+
+[spreadsheet_access]
+
+;;; oauth 2.0 credential cache ;;; ---
+credential_path: %(home_path)s/.credentials
+credential_cache: oauth2.%(user)s.creds.json
+client_secret_path: %(credential_path)s/hssc_webapp.json
+
+client_scopes: https://www.googleapis.com/auth/spreadsheets
+client_app_id: HSSC Google Sheets API
+
+discovery_url: https://sheets.googleapis.com/$discovery/rest?version=v4
+spreadsheet_id: 14-qgwW4jGBQgVnoPS_bqXUBSMSmijtLm1_1aM3MrPEk
+
+[create-batch]
+column_range: Sheet1!A1:U1
+column_map: batch|start_date|end_date|succs|fails|procs
+column_updates: Batch ID|Create Batch Date/Time Started|Create Batch Date/Time Completed|Count Successful|Count Failed|Total Processed
+
+
+[notify]
+
+account_sid: 
+auth_token: 
+
+;;; your phone number ;;; ---
+phone_number: 
+
+;;; from number - this is the number you got when you signed up on twilio ;;; ---
+twilio_number: 
+
+;;; notification preferences for incidents ;;; ---
+;;; choose one of the following: no, yes
+batch_create_notify: yes
+
