@@ -1,4 +1,5 @@
 CHANGES
 =======
 
+* bulk loading batch - tested in dev
 * Initial commit
